<resources>
    <string name="app_name" translatable="false">AndroidFTPDocumentProvider</string>
	<string name="account_name" translatable="false">File Transfer Protocol</string>
	<string name="ftp" translatable="false">FTP</string>
	<string name="ip">Ip</string>
	<string name="port">Port</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="add_account">Add account</string>
	<string name="anonymous">Anonymous</string>
	<string name="open_saf">Open the android file manager</string>
	<string name="open_app_settings">Open app settings</string>
	<string name="introduction">This app adds to the default android file manger (SAF), FTP client abilities</string>
	<string name="add_account_instructions">To add an FTP server you need to create a new FTP account that will appear in the android\'s accounts section, to do so click this button</string>
	<string name="open_saf_instructions">To open the android file manager (SAF) you can use this button because some OEMs hide it because they don\'t understand its true power</string>
	<string name="bug_fix_instructions">If the ftp account doesn\'t appear in the side view, you need to clear all the data of this app because the android file manager (SAF) hasn\'t update its accounts yet</string>
</resources>
