<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent">

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:gravity="center">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/introduction"
			android:gravity="center"/>

		<View
			android:background="?android:attr/dividerVertical"
			android:layout_height="30dp"
			android:layout_width="match_parent"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/add_account_instructions"
			android:gravity="center"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/add_account"
			android:onClick="addAccount"/>

		<View
			android:background="?android:attr/dividerVertical"
			android:layout_height="30dp"
			android:layout_width="match_parent"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/open_saf_instructions"
			android:gravity="center"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/open_saf"
			android:onClick="openSaf"/>

		<View
			android:background="?android:attr/dividerVertical"
			android:layout_height="30dp"
			android:layout_width="match_parent"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/bug_fix_instructions"
			android:gravity="center"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/open_app_settings"
			android:onClick="openAppSettings"/>

	</LinearLayout>

</ScrollView>

