<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical">

	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_weight="1.0"
		android:gravity="center">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/ip"/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_weight="1.0"
		android:gravity="center">

		<EditText
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:ems="10"
			android:hint="192.168.1.1"
			android:id="@+id/ip"
			android:gravity="center"/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_weight="1.0"
		android:gravity="center">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/port"/>

	</RelativeLayout>

	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_weight="1.0"
		android:gravity="center">

		<EditText
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:ems="10"
			android:hint="1234"
			android:id="@+id/port"
			android:gravity="center"/>

	</RelativeLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0"
		android:gravity="center">

		<Switch
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/anonymous"
			android:id="@+id/anonymous"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0"
		android:visibility="visible"
		android:id="@+id/credentials">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_weight="1.0">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/username"
				android:textAppearance="?android:attr/textAppearanceLarge"/>

		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:gravity="center">

			<EditText
				android:layout_width="wrap_content"
				android:ems="10"
				android:layout_height="wrap_content"
				android:id="@+id/user"/>

		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:gravity="center">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/password"
				android:textAppearance="?android:attr/textAppearanceLarge"/>

		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:gravity="center">

			<EditText
				android:layout_width="wrap_content"
				android:ems="10"
				android:layout_height="wrap_content"
				android:id="@+id/password"/>

		</RelativeLayout>

	</LinearLayout>

	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_weight="1.0"
		android:gravity="center">

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/add_account"
			android:onClick="confirm"/>

	</RelativeLayout>

</LinearLayout>

